--- a/index.html
+++ b/index.html
@@ -165,6 +165,6 @@
       </p>
     </footer>
 
-    <script src="js/cotizador.js"></script>
+    <script src="cotizador.js"></script>
   </body>
 </html>
