Cambios en servicios y estilos
Se elimino el servicio de vitropiso y se modificaron los formularios

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Servicios de albañilería profesional en Hermosillo: enjarres, acabados, yeso, vitropiso y más. Calidad garantizada."
+      content="Servicios de albañilería profesional en Hermosillo: enjarres, acabados, yeso y más. Calidad garantizada."
     />
     <title>Albañilería Profesional en Hermosillo</title>
     <link rel="stylesheet" href="styles.css" />
@@ -13,8 +13,8 @@
   <body>
     <header>
       <div class="container">
-        <h1>Albañilería Salvador Garcia</h1>
-        <p>Enjarres, acabados finos, yeso, vitropiso y más</p>
+        <h1>Albañil Salvador Garcia</h1>
+        <p>Enjarres, acabados finos, yeso y más</p>
         <a href="#contacto" class="btn">Solicita tu presupuesto</a>
       </div>
     </header>
@@ -34,10 +34,6 @@
           <div class="card">
             <h3>Yeso</h3>
             <p>Soluciones rápidas para interiores, limpio y duradero.</p>
-          </div>
-          <div class="card">
-            <h3>Pega de Vitropiso</h3>
-            <p>Instalación precisa de piso cerámico y azulejo.</p>
           </div>
           <div class="card">
             <h3>Trabajos Generales</h3>
@@ -61,14 +57,44 @@
             <h3>Enjarre</h3>
             <form class="formCotizador">
               <label
-                >Base (m): <input type="number" class="base" step="0.1"
+                >Base (m):
+                <input type="number" class="base" step="0.1" placeholder="3"
               /></label>
               <label
-                >Altura (m): <input type="number" class="altura" step="0.1"
+                >Altura (m):
+                <input type="number" class="altura" step="0.1" placeholder="2"
               /></label>
               <p style="text-align: center">— o —</p>
               <label
-                >Metros Cuadrados: <input type="number" class="m2" step="0.1"
+                >Metros Cuadrados:
+                <input type="number" class="m2" step="0.1" placeholder="6"
+              /></label>
+              <button type="submit" class="btn">Calcular</button>
+              <div class="resultado"></div>
+            </form>
+          </div>
+
+          <!-- Cotizador Fino -->
+          <div
+            class="cotizador-box"
+            data-servicio="Fino"
+            data-precio-min="160"
+            data-precio-max="200"
+          >
+            <h3>Fino</h3>
+            <form class="formCotizador">
+              <label
+                >Base (m):
+                <input type="number" class="base" step="0.1" placeholder="4"
+              /></label>
+              <label
+                >Altura (m):
+                <input type="number" class="altura" step="0.1" placeholder="3"
+              /></label>
+              <p style="text-align: center">— o —</p>
+              <label
+                >Metros Cuadrados:
+                <input type="number" class="m2" step="0.1" placeholder="12"
               /></label>
               <button type="submit" class="btn">Calcular</button>
               <div class="resultado"></div>
@@ -79,27 +105,30 @@
           <div
             class="cotizador-box"
             data-servicio="Yeso"
-            data-precio-min="80"
-            data-precio-max="100"
+            data-precio-min="60"
+            data-precio-max="90"
           >
             <h3>Yeso</h3>
             <form class="formCotizador">
               <label
-                >Base (m): <input type="number" class="base" step="0.1"
+                >Base (m):
+                <input type="number" class="base" step="0.1" placeholder="3"
               /></label>
               <label
-                >Altura (m): <input type="number" class="altura" step="0.1"
+                >Altura (m):
+                <input type="number" class="altura" step="0.1" placeholder="2"
               /></label>
               <p style="text-align: center">— o —</p>
               <label
-                >Metros Cuadrados: <input type="number" class="m2" step="0.1"
+                >Metros Cuadrados:
+                <input type="number" class="m2" step="0.1" placeholder="6"
               /></label>
               <button type="submit" class="btn">Calcular</button>
               <div class="resultado"></div>
             </form>
           </div>
 
-          <!-- Cotizador Vitropiso -->
+          <!-- Cotizador Vitropiso 
           <div
             class="cotizador-box"
             data-servicio="Vitropiso"
@@ -110,18 +139,19 @@
             <form class="formCotizador">
               <label
                 >Base (m): <input type="number" class="base" step="0.1"
-              /></label>
+placeholder="3"              /></label>
               <label
                 >Altura (m): <input type="number" class="altura" step="0.1"
-              /></label>
+placeholder="2"              /></label>
               <p style="text-align: center">— o —</p>
               <label
-                >Metros Cuadrados: <input type="number" class="m2" step="0.1"
+                >Metros Cuadrados: <input type="number" class="m2" step="0.1" placeholder="6"
               /></label>
               <button type="submit" class="btn">Calcular</button>
               <div class="resultado"></div>
             </form>
           </div>
+          -->
 
           <!-- Agrega más cotizadores aquí... -->
         </div>
@@ -132,36 +162,37 @@
       <div class="container">
         <h2>Sobre Nosotros</h2>
         <p>
-          Con más de 10 años de experiencia en el oficio, ofrecemos calidad,
-          honestidad y compromiso en cada trabajo. Atendemos en Hermosillo y
-          alrededores.
+          Con más de 6 años de experiencia en albañilería y acabados, nos
+          dedicamos a brindar resultados de calidad con honestidad y compromiso.
+          Trabajamos en Hermosillo y sus alrededores, y estamos listos para
+          asumir desde los proyectos más pequeños hasta los más exigentes.
         </p>
       </div>
     </section>
-
+    <!-- #region 
     <section id="galeria">
       <div class="container">
         <h2>Galería de Trabajos</h2>
         <p>
-          (Aquí puedes agregar imágenes de tus trabajos reales más adelante)
+          (Imagenes pendientes)
         </p>
       </div>
     </section>
-
+-->
     <section id="contacto" class="bg-light">
       <div class="container">
         <h2>Contacto</h2>
         <p>Solicita tu cotización sin compromiso:</p>
         <ul>
-          <li>📱 WhatsApp: 123-456-7890</li>
-          <li>📧 Correo: tuemail@ejemplo.com</li>
+          <li>📱 WhatsApp: 6623543728</li>
+          <li>📧 Correo: garciasamaniego.salvador@gmail.com</li>
         </ul>
       </div>
     </section>
 
     <footer>
       <p>
-        &copy; 2025 Albañilería Salvador Garcia – Todos los derechos reservados.
+        &copy; 2025 Albañil Salvador Garcia – Todos los derechos reservados.
       </p>
     </footer>
 
